log/build_2025-06-20_07-11-07/my_robot/stderr.log
  File "/root/ros2_ws/install/my_robot/lib/python3.10/site-packages/my_robot/stopper_node.py", line 31
    if self.min_distance < self.threshold
                                         ^
SyntaxError: expected ':'

